--- a/manual/plantilla-tfg/proyecto.tex
+++ b/manual/plantilla-tfg/proyecto.tex
@@ -179,7 +179,7 @@ pdfproducer = {pdflatex}
 %\mainmatter
 %\setlength{\parskip}{5pt}
 
-%\input{capitulos/01_Introduccion}
+\input{capitulos/01_Introduccion}
 %
 %\input{capitulos/02_EspecificacionRequisitos}
 %
