--- a/manual/plantilla-tfg/capitulos/01_Introduccion.tex
+++ b/manual/plantilla-tfg/capitulos/01_Introduccion.tex
@@ -1,10 +1,6 @@
-\chapter{}
+\chapter{Introducción}
 \thispagestyle{empty}
 
-\section*{Introducción}
-\thispagestyle{empty}
-
-       \vspace{1cm}
 
 
 Poner la introducción
