--- a/manual/plantilla-tfg/prefacios/prefacio.tex
+++ b/manual/plantilla-tfg/prefacios/prefacio.tex
@@ -31,3 +31,14 @@ Poner aquí el resumen.
 
 Poner aquí agradecimientos...
 
+\cleardoublepage
+
+\tableofcontents % indice de contenidos
+
+\cleardoublepage
+\addcontentsline{toc}{chapter}{Lista de figuras} % para que aparezca en el indice de contenidos
+\listoffigures % indice de figuras
+
+\cleardoublepage
+\addcontentsline{toc}{chapter}{Lista de tablas} % para que aparezca en el indice de contenidos
+\listoftables % indice de tablas
