--- a/manual/plantilla-tfg/prefacios/prefacio.tex
+++ b/manual/plantilla-tfg/prefacios/prefacio.tex
@@ -16,7 +16,7 @@
 \vspace{0.7cm}
 \noindent{\textbf{Resumen}}\\
 
-Poner aquí el resumen.
+El objetivo de este proyecto es desarrollar un simulador suya utilización permita evaluar distintos tipos de algoritmos de recomendaciones.
 \cleardoublepage
 
 
@@ -29,7 +29,13 @@ Poner aquí el resumen.
        \vspace{1cm}
 
 
-Poner aquí agradecimientos...
+Me gustaría agradecer este Trabajo Fin de Grado a todas las personas que lo han echo posible con su apoyo y dedicación.
+
+\vspace{1cm}
+En su primer lugar a mi director Sergio Ilarri por la oportunidad que me ha dado para realizar este proyecto, su paciencia y ayuda, sin la cual este proyecto no hubiera sido posible. A mis compañeros y amigos de clase, con los que he compartido estos años de carrera, por hacer que los momentos de estudio y prácticas fuesen agradables y amenos. A mi familia y amigos más cercanos, por su paciencia y por motivarme para seguir adelante en los momentos más complicados.
+
+\vspace{1cm}
+Y por supuesto a la Universidad de Zaragoza y a todos aquellos profesores de lo que he aprendido tanto a los largo de estos años.
 
 \cleardoublepage
 
