--- a/manual/plantilla-tfg/prefacios/prefacio.tex
+++ b/manual/plantilla-tfg/prefacios/prefacio.tex
@@ -4,7 +4,7 @@
 \thispagestyle{empty}
 
 \begin{center}
-{\large\bfseries Simulador de recomendaciones}\\
+{\large\bfseries Simulador de escenarios con usuarios móviles}\\
 \end{center}
 %\begin{center}
 %Nombre Apellido1 Apellido2 (alumno)\\
@@ -16,7 +16,7 @@
 \vspace{0.7cm}
 \noindent{\textbf{Resumen}}\\
 
-El objetivo de este proyecto es desarrollar un simulador suya utilización permita evaluar distintos tipos de algoritmos de recomendaciones.
+El objetivo de este proyecto es desarrollar un simulador de escenarios con usuarios móviles que permita la evaluación de algoritmos de recomendación.
 \cleardoublepage
 
 
