--- a/manual/plantilla-tfg/proyecto.tex
+++ b/manual/plantilla-tfg/proyecto.tex
@@ -30,7 +30,7 @@
 % ********************************************************************
 % Re-usable information
 % ********************************************************************
-\newcommand{\myTitle}{Simulador de recomendaciones\xspace}
+\newcommand{\myTitle}{Simulador de escenarios con usuarios móviles que permita la evaluación de algoritmos de recomendación\xspace}
 \newcommand{\myDegree}{Grado en Ingenieríaa Informática\xspace}
 \newcommand{\myName}{Slavcho Georgiev Ivanov\xspace}
 \newcommand{\myProf}{Sergio Ilarri Artigas\xspace}
