--- a/manual/proyecto/prefacios/prefacio.tex
+++ b/manual/proyecto/prefacios/prefacio.tex
@@ -4,14 +4,8 @@
 \thispagestyle{empty}
 
 \begin{center}
-{\large\bfseries Simulador de escenarios con usuarios móviles}\\
+{\large\bfseries \myTitle}\\
 \end{center}
-%\begin{center}
-%Nombre Apellido1 Apellido2 (alumno)\\
-%\end{center}
-
-%\vspace{0.7cm}
-%\noindent{\textbf{Palabras clave}: palabra\_clave1, palabra\_clave2, palabra\_clave3, ......}\\
 
 \vspace{0.7cm}
 \noindent{\textbf{Resumen}}\\
