--- a/manual/proyecto/proyecto.tex
+++ b/manual/proyecto/proyecto.tex
@@ -30,18 +30,20 @@
 % ********************************************************************
 % Re-usable information
 % ********************************************************************
-\newcommand{\myTitle}{Simulador de escenarios con usuarios móviles que permita la evaluación de algoritmos de recomendación\xspace}
-\newcommand{\myDegree}{Grado en Ingenieríaa Informática\xspace}
-\newcommand{\myName}{Slavcho Georgiev Ivanov\xspace}
-\newcommand{\myProf}{Sergio Ilarri Artigas\xspace}
+\newcommand{\myTitle}{ Desarrollo de un simulador de escenarios con usuarios móviles para la evaluación de algoritmos de recomendaciones}
+\newcommand{\myDegree}{GRADO EN INGENIERÍA INFORMÁTICA}
+\newcommand{\TFG}{TRABAJO FIN DE GRADO}
+\newcommand{\myName}{Slavcho Georgiev Ivanov}
+\newcommand{\myProf}{Sergio Ilarri Artigas}
 %\newcommand{\mySupervisor}{Put name here\xspace}
-\newcommand{\myFaculty}{Escuela de Ingeniería y Arquitectura\xspace}
-\newcommand{\myFacultyShort}{EINA\xspace}
-\newcommand{\myDepartment}{Departamento de Informatica e Ingenieria de Sistemas\xspace}
-\newcommand{\myUni}{\protect{Universidad de Zaragoza}\xspace}
-\newcommand{\myLocation}{Zaragoa\xspace}
-\newcommand{\myTime}{\today\xspace}
-\newcommand{\myVersion}{Version 0.1\xspace}
+\newcommand{\myFaculty}{Escuela de Ingeniería y Arquitectura}
+\newcommand{\myFacultyShort}{EINA}
+\newcommand{\myArea}{Área de Lenguajes y Sistemas Informáticos}
+\newcommand{\myDepartment}{Departamento de Informática e Ingeniería de Sistemas}
+\newcommand{\myUni}{\protect{Universidad de Zaragoza}}
+\newcommand{\myLocation}{Zaragoza}
+\newcommand{\myTime}{\today}
+\newcommand{\myVersion}{Version 0.1}
 
 
 \hypersetup{
