--- a/manual/proyecto/capitulos/01_Introduccion.tex
+++ b/manual/proyecto/capitulos/01_Introduccion.tex
@@ -33,7 +33,7 @@ Además de los objetivos marcados por la propuesta del Trabajo Fin de Grado, tam
 
        %\vspace{1cm}
 
-En esta sección se listan las tecnologias, libererías externas y herramientas utilizadas para el desarrollo del proyecto acompañada de una breve descripción del porqué de su uso.
+En esta sección se listan las tecnologias, libererías externas y herramientas utilizadas para el desarrollo del proyecto acompañada de una breve descripción.
 
        \vspace{0.7cm}
 \noindent{\textbf{Librerías usadas}}\\
@@ -43,21 +43,31 @@ Para el desarrollo del proyecto se ha hecho uso de diversas librerías externas 
 
 \begin{itemize}
        \item {\bfseries Openlayers}: framework de OpenStreetMap que nos permite el uso libre de mapas.
-       \item {\bfseries Node.js}: entorno Javascript del lado del servidor basado en el motor V8 de Google. 
-       \item {\bfseries Express}: framework de Node.js destinado a la creación de APIs Rest
+       \item {\bfseries Node.js v0.12.4}: entorno Javascript del lado del servidor basado en el motor V8 de Google. 
+       \item {\bfseries Express v4.12.4}: framework de Node.js destinado a la creación de APIs Rest
        \item {\bfseries Angular.js}: framework javascript que facilita la creación de aplicaciones en una sola página. 
-       \item {\bfseries Mongoose}: framework de Node.js destinado al modelado de objetos para MongoDB.
-       \item {\bfseries jwt.io}: framework destinado a la creación y distribución de web tokens. 
-       \item {\bfseries socket.io}: framework de Node.js destinado a la creación de comunicaciones bidirecionales basadas en eventos
-       \item {\bfseries Apache mahout}: framework de Java destinado al aprendizaje automático.
-       \item {\bfseries socket.io-client}: cliente Java para socket.io desarrollado por Naoyuki Kanezawa
+       \item {\bfseries Mongoose v4.1.2}: framework de Node.js destinado al modelado de objetos para MongoDB.
+       \item {\bfseries jwt.io v5.0.4}: framework destinado a la creación y distribución de web tokens. 
+       \item {\bfseries socket.io v1.4.4}: framework de Node.js destinado a la creación de comunicaciones bidirecionales basadas en eventos
+       \item {\bfseries Apache mahout v0.11.1}: framework de Java destinado al aprendizaje automático.
+       \item {\bfseries socket.io-client v0.1.0}: cliente Java para socket.io desarrollado por Naoyuki Kanezawa
 \end{itemize}
 
        \vspace{0.7cm}
 \noindent{\textbf{Herramienta de desarrollo}}\\
 \thispagestyle{empty}
 
-Poner las herramientas de desarrollo
+Durante el desarrollo de este Trabajo Fin de Grado se han utilizado las siguientes herramientas:
+
+\begin{itemize}
+       \item {\bfseries Eclipse Java EE IDE}: editor de código Java version Mars 4.5.1
+       \item {\bfseries Maven v3.2.5}: gestor de paquetes para desarrollos Java
+       \item {\bfseries Brackets.io v1.6.0}: editor de código para desarrollos web
+       \item {\bfseries Git v1.9.4}: sistema de control de versiones
+       \item {\bfseries GitHub}: repositorio de código
+       \item {\bfseries Cmder}: emulador cmd de Windows 
+       \item {\bfseries Sublime text 2}: editor de texto avanzado 
+\end{itemize}
 
 
        \vspace{0.7cm}
@@ -95,7 +105,8 @@ Poner los trabajos relacionados
 El contenido de la memoría está distribuido de la siguiente forma:
 
 \begin{itemize}
-	\item En el capítulo 2 se expone el trabajo desarrollado para la elaboración del simulador
-	\item En el capítulo 3 se analiza la posible explotación del simulador como método para probar diferentes tipos de algoritmos de recomendaciones, También se muestra el rendimiento obtenido del simulador
-	\item En l capítulo 4 se muestran las conclusione del proyecto y el posible trabajo futuro de cada a mejorar el simulador 
+	\item En el capítulo 2 se expone el trabajo desarrollado para la elaboración de este simulador
+	\item En el capítulo 3 se expone la gestión del proyecto y las distintas etapas por las que ha pasado este proyecto
+       \item En el capítulo 4 se describe la interfaz que nos permite integrar un recomendador externo
+	\item En el capítulo 5 se muestran las conclusione del proyecto y el posible trabajo futuro de cara a mejorar el simulador 
 \end{itemize}
