--- a/manual/proyecto/proyecto.tex
+++ b/manual/proyecto/proyecto.tex
@@ -183,7 +183,7 @@ pdfproducer = {pdflatex}
 
 \input{capitulos/01_Introduccion}
 %
-%\input{capitulos/02_EspecificacionRequisitos}
+\input{capitulos/02_TrabajoDesarrollado}
 %
 %\input{capitulos/03_Planificacion}
 %
