--- a/manual/proyecto/capitulos/02_TrabajoDesarrollado.tex
+++ b/manual/proyecto/capitulos/02_TrabajoDesarrollado.tex
@@ -1,12 +1,16 @@
 \chapter{Trabajo desarrollado}
 \thispagestyle{empty}
 
-En este capítulo se explican las funcionalidades básicas del sistema desarrollado centradose únicamente en los aspectos más importantes. Para profundizar más sobre estos aspectos acudir a los anexos.
+En este capítulo se explican las funcionalidades básicas del simulador desarrollado centradose únicamente en los aspectos más importantes. Para profundizar más sobre estos aspectos debe acudir a los anexos.
 
 \section{Resumen del simulador}
 \thispagestyle{empty}
 
+El simulador permite configurar distintos escenarios con objetos móviles y estáticos sobre mapas de ciudades reales obtenidos a partir del servicio de mapas de OpenStreetMap. Puede ser usado a través de cualquier tipo de dispositovo (PC, tablet, móvil etc.) con conexión a Internet y permite seleccionar uno de los escenarios previamente configurados.
 
+El simulador de escenarios está basado en el simulador Mavsim desarrollado por el Grupo de Sistemas de Información Distribuidos de la Universidad de Zaragoza utilizado para la simulación de VANETs en el cual hay muchos vehículos distribuidos en una amplia zona geografica.
+
+El sistema consiste en que los usuarios elegen en que mapa y escenario moverse para obtener recomendaciones sobre los objetos de este entorno.
 
 \section{Arquictura del sistema}
 \thispagestyle{empty}
