--- a/manual/proyecto/prefacios/prefacio.tex
+++ b/manual/proyecto/prefacios/prefacio.tex
@@ -10,7 +10,8 @@
 \vspace{0.7cm}
 \noindent{\textbf{Resumen}}\\
 
-El objetivo de este proyecto es desarrollar un simulador de escenarios con usuarios móviles que permita la evaluación de algoritmos de recomendación.
+Los sistemas de recomendación proporcionan sugerencias acerca de elementos que pueden resultar de interés para el usuario (hoteles, restaurantes, libros, películas, etc.). En este TFG se pretende desarrollar un simulador de escenarios con usuarios móviles (mapas de ciudades con objetos móviles y estáticos) que permita la evaluación de algoritmos de recomendación. 
+
 \cleardoublepage
 
 
