--- a/manual/proyecto/proyecto.tex
+++ b/manual/proyecto/proyecto.tex
@@ -173,13 +173,13 @@ pdfproducer = {pdflatex}
 \begin{document}
 \input{portada/portada}
 \input{prefacios/prefacio}
-%\frontmatter
-%\tableofcontents
-%\listoffigures
-%\listoftables
+\frontmatter
+\tableofcontents
+\listoffigures
+\listoftables
 %
-%\mainmatter
-%\setlength{\parskip}{5pt}
+\mainmatter
+\setlength{\parskip}{5pt}
 
 \input{capitulos/01_Introduccion}
 %
