--- a/manual/proyecto/capitulos/01_Introduccion.tex
+++ b/manual/proyecto/capitulos/01_Introduccion.tex
@@ -31,8 +31,11 @@ Además de los objetivos marcados por la propuesta del Trabajo Fin de Grado, tam
 \section{Contexto Tecnológico}
 \thispagestyle{empty}
 
-Habitualmente los sistemas de recomendación se evalúan con conjuntos de datos estáticos clásicos. El incoveniente que esto conlleva es que si ejecutamos el mismo algoritmo sobre un conjunto de datos estáticos varias veces siempre obtenemos el mismo resultado. 
+Habitualmente los sistemas de recomendación se evalúan con conjuntos de datos estáticos clásicos. El incoveniente que esto conlleva es que si ejecutamos el mismo algoritmo sobre un conjunto de datos estáticos varias veces siempre obtenemos el mismo resultado. Con el fin de evitar este incoveniente surge la necesidad de evaluar los algoritmos de recomendaciones con conjuntos de datos dinámicos. 
 
+Una de las formas de recolectar y proveer conjuntos de datos dinámicos es mediante el crowdsourcing. El crowdsourcing, tambien conocido como colaboración abierta distribuida, consiste en delegar tareas a un grupo de personas o comunidad a través de una convocatoria abierta. 
+
+Así que a medida que el grupo de personas o comunidad vayan realizando las tareas asignadas el sistema va recolectado y suministrando datos sobre las acciones que realizan estos para llevar a cabo sus tareas. Esto nos da la oportunidad para suministrar datos a los algoritmos de recomendaciones en tiempo real, es decir, suministrar datos a medida que el grupo de personas vayan cumpliendo con sus tareas.   
 
 \section{Herramientas utilizadas}
 \thispagestyle{empty}
