--- a/manual/proyecto/capitulos/02_TrabajoDesarrollado.tex
+++ b/manual/proyecto/capitulos/02_TrabajoDesarrollado.tex
@@ -11,13 +11,11 @@ Se trata de un sistema de colaboración abierta distribuida que permite configur
 
 El simulador de escenarios está basado en el simulador Mavsim desarrollado por el Grupo de Sistemas de Información Distribuidos de la Universidad de Zaragoza utilizado para la simulación de VANETs en el cual hay muchos vehículos distribuidos en una amplia zona geografica.
 
-\begin{figure}
+\begin{figure}[H]
 \centering\includegraphics[width=0.8\textwidth]{imagenes/resumen-simulador.jpg}
 \caption{Simulación en Actur, Zaragoza con un solo usuario}
 \label{c2_trama}
 \end{figure}
-
-%\clearpage
 
 Puede ser usado a través de cualquier dispositovo (PC, tablet, móvil etc.) con conexión a Internet y un navegador web. Permite a los usuarios crear sus propios mapas y escenarios. Durante la creación de una escena el usuario elige cual es la cuidad donde se realiza la simulación, el recomendador a utilizar, si el mapa es colaborativo o no, introducir los objetos estáticos y configurar cuales son los objetos móviles y sus rutas. 
 
@@ -26,3 +24,8 @@ Para realizar una simulación el usuario tiene que buscar y seleccionar el mapa 
 \section{Arquictura del sistema}
 \thispagestyle{empty}
 
+\begin{figure}[H]
+\centering\includegraphics[width=0.9\textwidth]{imagenes/arquitectura-componentes.png}
+\caption{Arquitectura de componentes del sistema}
+\label{arquitecturaComponentes}
+\end{figure}
