--- a/manual/proyecto/proyecto.tex
+++ b/manual/proyecto/proyecto.tex
@@ -1,5 +1,6 @@
 \documentclass[a4paper,11pt]{book}
 %\documentclass[a4paper,twoside,11pt,titlepage]{book}
+\usepackage{dirtree}
 \usepackage{listings}
 \usepackage{float}
 \usepackage[utf8]{inputenc}
