--- a/manual/proyecto/capitulos/01_Introduccion.tex
+++ b/manual/proyecto/capitulos/01_Introduccion.tex
@@ -1,7 +1,7 @@
 \chapter{Introducción}
 \thispagestyle{empty}
 
-En este capítulo se mostrará la motivación existente para la realización de este Trabajo Fin de Grado, los objetivos que han sido marcados por el proyecto, las librerías y herramientas utilizadas para su elaboración, el modelo de trabajo seleccionado y también se analizará el trabajo relacionado. Finalmente se mostrará la estructura seguida en este documento.
+En este capítulo se mostrará la motivación existente para la realización de este Trabajo Fin de Grado, los objetivos que han sido marcados por el proyecto, las librerías y herramientas utilizadas para su elaboración, el modelo de trabajo seleccionado y también se analizará el contexto tecnológico. Finalmente se mostrará la estructura seguida en este documento.
 
 \section{Motivación del proyecto}
 \thispagestyle{empty}
