--- a/manual/proyecto/capitulos/02_TrabajoDesarrollado.tex
+++ b/manual/proyecto/capitulos/02_TrabajoDesarrollado.tex
@@ -126,14 +126,28 @@ El evento recommend es el que se dispara cuando unos de los usuarios solicita un
 \end{figure}
 
 \section{Menús del simulador de escenarios}
+\thispagestyle{empty}
 
-Poner el diagrama de navegación
+Como en todas las aplicaciones, el simulador de escenarios cuenta con un sistema de menús que dan acceso a las distintas opciones del simulador. En este caso se ha seguido la paradigma WIMP para la organización de los menús y distinas opciones (figura \ref{mapaNavegacion}). Existen 4 tipos de caminos organizados en forma de árbol:
 
-\section{Elementos del simulador de escenarios}
+\begin{itemize}
+	\item busqueda y gestión (creación, edición y borrados) de mapas y escenas
+	\item simulación de un mapa y escena
+	\item gestión de tipos de recomendadores, objetos estáticos\footnote{objetos que no cambian de posición a medida que pasa el tiempo} y dinámicos\footnote{objetos que cambian de posición a medida que pasa el tiempo. Tienen una ruta difinida durante la creación de la escena}
+	\item configuraciones del perfil del usuario
+\end{itemize} 
 
-Explicar los objetos dinamicos y estaticos
+\begin{figure}[H]
+\centering\includegraphics[scale=0.7]{imagenes/mapa-navegacion.png}
+\caption{Mapa de navegación}
+\label{mapaNavegacion}
+\end{figure}
 
-\section{Comportamiento de los objetos dinámicos}
+\newpage
 
-Explicar como se ha desarrollado el tema del movimientos de los objetos dinámicos
+\section{Navegación por estima}
+\thispagestyle{empty}
 
+La navegación por estima es una técnica que se aplica en el cliente. Consiste en procesar en cada ciclo el estado de los objetos móviles. Se trata de una técnica análitica utilizada en la náutica para la navegación y situación de los barcos y se tienen en cuenta los siguientes elementos: la situación actual, rumbo y velocidad. Es decir, sabiendo la velocidad, el rumbo de la nave y el tiempo transcurido se puede estimar la posición de la misma al cabo del tiempo. 
+
+Con este método conseguimos calcular cual es la siguiente posición geográfica donde tenemos que colocar un objeto móvil al acabo de un tiempo (el tiempo de refresco de la pántalla). Como ventaja conseguimos disminuir el error en el cálculo de las posiciones de los objetos móviles. Así obtenemos movimientos muy precisos incluso en grafos de movimientos con nodos muy cercanos. Para evitar problemas en estos casos lo único que habia que hacer es poner tiempos bajos de refresco de la pántalla.
