--- a/manual/proyecto/capitulos/01_Introduccion.tex
+++ b/manual/proyecto/capitulos/01_Introduccion.tex
@@ -60,6 +60,9 @@ Para el desarrollo del proyecto se ha hecho uso de diversas librerías externas 
        \item {\bfseries socket.io v1.4.4}: framework de Node.js destinado a la creación de comunicaciones bidirecionales basadas en eventos
        \item {\bfseries Apache mahout v0.11.1}: framework de Java destinado al aprendizaje automático.
        \item {\bfseries socket.io-client v0.1.0}: cliente Java para socket.io desarrollado por Naoyuki Kanezawa
+       \item {\bfseries CityEngine 2014}: software de modelado de cuidades
+       \item {\bfseries Unity 5}: motor gráfico para la creación de videojuegos
+       \item {\bfseries OSM2Word}: visualizador de datos con formato OSM
 \end{itemize}
 
        \vspace{0.7cm}
