--- a/manual/proyecto/proyecto.tex
+++ b/manual/proyecto/proyecto.tex
@@ -3,6 +3,7 @@
 \usepackage{dirtree}
 \usepackage{listings}
 \usepackage{float}
+\usepackage{subfig}
 \usepackage[utf8]{inputenc}
 \usepackage[spanish]{babel}
 
@@ -187,7 +188,7 @@ pdfproducer = {pdflatex}
 %
 \input{capitulos/02_TrabajoDesarrollado}
 %
-%\input{capitulos/03_Planificacion}
+\input{capitulos/03_GestionProyecto}
 %
 %\input{capitulos/04_Analisis}
 %
