--- a/manual/proyecto/capitulos/02_TrabajoDesarrollado.tex
+++ b/manual/proyecto/capitulos/02_TrabajoDesarrollado.tex
@@ -1,7 +1,6 @@
 \chapter{Trabajo desarrollado}
 \thispagestyle{empty}
 
-
 En este capítulo se explican las funcionalidades básicas del simulador desarrollado centradose únicamente en los aspectos más importantes. Para profundizar más sobre estos aspectos debe acudir a los anexos.
 
 \section{Resumen del simulador}
@@ -20,6 +19,54 @@ El simulador de escenarios está basado en el simulador Mavsim desarrollado por 
 Puede ser usado a través de cualquier dispositovo (PC, tablet, móvil etc.) con conexión a Internet y un navegador web. Permite a los usuarios crear sus propios mapas y escenarios. Durante la creación de una escena el usuario elige cual es la cuidad donde se realiza la simulación, el recomendador a utilizar, si el mapa es colaborativo o no, introducir los objetos estáticos y configurar cuales son los objetos móviles y sus rutas. 
 
 Para realizar una simulación el usuario tiene que buscar y seleccionar el mapa y escenario donde moverse tanto para obtener recomendaciones como para realizar votaciones sobre los distintos objetos de este entorno.
+
+\section{Análisis de requisitos}
+\thispagestyle{empty}
+
+\subsection{Requisitos funcionales}
+\thispagestyle{empty}
+
+\begin{table}[htbp]
+\begin{center}
+\begin{tabular}{|l|l|}
+\hline
+Código de requisito & Descripción \\
+\hline \hline
+RF-1  & Descripcion \\ \hline
+RF-1  & Descripcion \\ \hline
+RF-1  & Descripcion \\ \hline
+RF-1  & Descripcion \\ \hline
+RF-1  & Descripcion \\ \hline
+RF-1  & Descripcion \\ \hline
+RF-1  & Descripcion \\ \hline
+\end{tabular}
+\caption{Requisitos funcionales}
+\label{tabla:requisitosFuncionales}
+\end{center}
+\end{table}
+
+
+\subsection{Requisitos no funcionales}
+\thispagestyle{empty}
+
+\begin{table}[htbp]
+\begin{center}
+\begin{tabular}{|l|l|}
+\hline
+Código de requisito & Descripción \\
+\hline \hline
+RNF-1  & Descripcion \\ \hline
+RNF-1  & Descripcion \\ \hline
+RNF-1  & Descripcion \\ \hline
+RNF-1  & Descripcion \\ \hline
+RNF-1  & Descripcion \\ \hline
+RNF-1  & Descripcion \\ \hline
+RNF-1  & Descripcion \\ \hline
+\end{tabular}
+\caption{Requisitos no funcionales}
+\label{tabla:requisitosNoFuncionales}
+\end{center}
+\end{table}
 
 \section{Arquictura del sistema}
 \thispagestyle{empty}
@@ -117,7 +164,7 @@ Durante el arranque el servidor del recomendador lanza un hilo por cada tipo de 
 \label{diagramaEventos}
 \end{figure}
 
-El evento recommend es el que se dispara cuando unos de los usuarios solicita una recomendación. Para que se puedan utilizar distintos tipos de implementaciones del recomendador de tipo pull se ha implementado un patrón de diseño de tipo Strategy. Este patrón de diseños nos permite cambiar de estrategia de recomendación en tiempo de ejecución:
+El evento recommend es el que se dispara cuando uno de los usuarios solicita una recomendación. Para que se puedan utilizar distintos tipos de implementaciones del recomendador de tipo pull se ha implementado un patrón de diseño de tipo Strategy. Este patrón de diseños nos permite cambiar de estrategia de recomendación en tiempo de ejecución:
 
 \begin{figure}[H]
 \includegraphics[scale=0.7]{imagenes/uml.png}
@@ -150,4 +197,7 @@ Como en todas las aplicaciones, el simulador de escenarios cuenta con un sistema
 
 La navegación por estima es una técnica que se aplica en el cliente. Consiste en procesar en cada ciclo el estado de los objetos móviles. Se trata de una técnica análitica utilizada en la náutica para la navegación y situación de los barcos y se tienen en cuenta los siguientes elementos: la situación actual, rumbo y velocidad. Es decir, sabiendo la velocidad, el rumbo de la nave y el tiempo transcurido se puede estimar la posición de la misma al cabo del tiempo. 
 
-Con este método conseguimos calcular cual es la siguiente posición geográfica donde tenemos que colocar un objeto móvil al acabo de un tiempo (el tiempo de refresco de la pántalla). Como ventaja conseguimos disminuir el error en el cálculo de las posiciones de los objetos móviles. Así obtenemos movimientos muy precisos incluso en grafos de movimientos con nodos muy cercanos. Para evitar problemas en estos casos lo único que habia que hacer es poner tiempos bajos de refresco de la pántalla.
+Con este método conseguimos calcular cual es la siguiente posición geográfica donde tenemos que colocar un objeto móvil al acabo de un tiempo (el tiempo de refresco de la pántalla). Como ventaja conseguimos disminuir el error en el cálculo de las posiciones de los objetos móviles. Así obtenemos movimientos muy precisos incluso en grafos de movimientos con nodos muy cercanos. Para evitar problemas en estos casos se han puesto tiempos bajos de refresco de la pántalla.
+
+\section{Diseño final}
+\thispagestyle{empty}
